--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<header>
+		<h1>3 random videos</h1>
+		<nav>
+			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Home</a>
+			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>About us</a>
+			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>Contact us</a>
+		</nav>
+	</header>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
