--- a/main.html
+++ b/main.html
@@ -7,14 +7,15 @@
 </head>
 
 <body>
-	<header>
 		<h1>3 random videos</h1>
 		<nav>
-			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Home</a>
-			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>About us</a>
-			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>Contact us</a>
+			<ul>
+			<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls>Home</a></li>
+			<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls>About us</a></li>
+			<li><a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls>Contact us</a></li>
+			</ul>
 		</nav>
-	</header>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
